--- a/css/leon.css
+++ b/css/leon.css
@@ -61,7 +61,7 @@ body {
   width: 104%;
   height: 102%;
   border-radius: 8px;
-  background-image: linear-gradient(var(--rotate), #5ddcff, #3c67e3 43%, #4e00c2);
+  background-image: linear-gradient(var(--rotate), var(--main-color), var(--secondary-color) 43%, var(--section-background));
   position: absolute;
   z-index: -1;
   top: -1%;
@@ -72,7 +72,7 @@ body {
 .border-color::after {
   position: absolute;
   content: "";
-  top: calc(var(--card-height) / 6);
+  top: calc(var(--card-height) / 11);
   left: 0;
   right: 0;
   z-index: -1;
@@ -80,8 +80,8 @@ body {
   width: 100%;
   margin: 0 auto;
   transform: scale(0.8);
-  filter: blur(calc(var(--card-height) / 9));
-  background-image: linear-gradient(var(--rotate), #5ddcff, #3c67e3 43%, #4e00c2);
+  filter: blur(calc(var(--card-height) / 5));
+  background-image: linear-gradient(var(--rotate), var(--main-color), var(--secondary-color) 43%, var(--section-background));
   opacity: 1;
   transition: opacity .5s;
   animation: spin 2.5s linear infinite;
@@ -129,7 +129,7 @@ body {
   margin: 0;
 }
 
-.special-heading+p {
+.special-heading + p {
   margin: -30px 0 0;
   font-size: 20px;
   text-align: center;
@@ -141,7 +141,7 @@ body {
     font-size: 60px;
   }
 
-  .special-heading+p {
+  .special-heading + p {
     margin-top: -20px;
   }
 }
@@ -152,26 +152,19 @@ body {
   padding: 20px;
 }
 
-.header.border-color::before {
+/* .container.border-color::before {
   width: 98%;
   height: 65%;
   top: 18%;
   left: 1%;
-}
+} */
 
-.header.border-color::after {
-  height: 50%;
-  width: 125%;
-  left: -10%;
+container.border-color::after {
+
   top: calc(var(--card-height) / 10);
 
 }
 
-.content-header {
-  width: 100%;
-  height: 100%;
-  background-color: var(--section-background);
-}
 
 .header .container {
   display: flex;
